prusti/tests/verify/fail/no-annotations/assert-bool.rs
extern crate prusti_contracts;

fn foo(x: bool) {
    assert!(x);  //~ ERROR assert!(..) statement might not hold
}

fn main() {

}
